--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,6 +4,6 @@
       { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "/api/reviews" }
+        { "src": "/(.*)", "dest": "/" }
       ]
   }
